# sticky

./: .gitignore  COPYING  README.md  com.vixalien.sticky.json  meson.build  meson_options.txt  package.json  pnpm-lock.yaml  tsconfig.json
.github/matchers/: appstream-util-validation.json
.github/workflows/: build.yml  flatpak.yaml
build-aux/flatpak/: com.vixalien.sticky.json  generated-sources.json
build-aux/flatpak/modules/: yarn-deps-sources.json
data/: card.ui  colors.styl  com.vixalien.sticky.appdata.xml.in  com.vixalien.sticky.appdata.xml.in.in  com.vixalien.sticky.data.gresource.xml  com.vixalien.sticky.desktop.in  com.vixalien.sticky.desktop.in.in  com.vixalien.sticky.gschema.xml  com.vixalien.sticky.gschema.xml.in  meson.build  notes-dark.styl  notes.styl  notes.ui  org.example.TypescriptTemplate.data.gresource.xml  style-dark.styl  style-selector.css  style-selector.styl  style.css  style.styl  util.styl  window.ui
data/gtk/: help-overlay.ui
data/icons/: meson.build
data/style/: colors.css  style-dark.css  style-selector.css  style.css  theme-selector.css
data/stylus/: colors.styl  meson.build  notes-dark.styl  notes.styl  style-dark.styl  style-selector.styl  style.styl  theme-selector.styl  util.styl
data/ui/: card.ui  editor.ui  help-overlay.ui  notes.ui  theme-selector.ui  window.ui
lib/: build.js  stylus.js
po/: LINGUAS  POTFILES  bg.po  ca.po  cs.po  de.po  es.po  eu.po  fr.po  he.po  hi.po  hu.po  it.po  meson.build  nl.po  oc.po  pt-br.po  pt_BR.po  ru.po  sticky-notes.pot  ta.po  tr.po  zh_CN.po
src/: application.ts  card.ts  com.vixalien.sticky.src.gresource.xml  editor.ts  errors.ts  main.ts  meson.build  notes.ts  org.example.TypescriptTemplate.in  org.example.TypescriptTemplate.src.gresource.xml  store.ts  styleselector.ts  tags.ts  textview.ts  themeselector.ts  url.ts  util.ts  view.ts  view2.ts  window.ts
src/note/: card.ts  editor.ts  textview.ts  view.ts  view2.ts  window.ts
src/util/: index.ts  list.ts  listeners.ts
types/: ambient.d.ts  extra.d.ts
