option(
        'profile',
        type: 'combo',
        choices: [
                'default',
                'development'
        ],
        value: 'default'
)
option(
        'offline-mirror',
        type: 'string'
)
option(
        'package-manager',
        type: 'string',
        value: 'yarn'
)